# ginsp

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: commands.rs  config.rs  credentials.rs  error.rs  git.rs  jira.rs  main.rs  utils.rs  view.rs
src/cli/: diagnostic.rs  diff_message.rs  mod.rs  update.rs  version.rs
src/commands/: mod.rs
src/config/: mod.rs  profile.rs
src/service/: git.rs  jira.rs
tests/fixtures/: test-config.toml
