[package]
name = "ginsp"
version = "0.0.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
indexmap = "2.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.110"
thiserror = "1.0.56"
toml = "0.8.8"
home = "0.5.3"
